Copyright (c) 2002-2007 Infrae. All rights reserved.
See also LICENSE.txt


Silva changes

  1.5.10

    Features added

      - 2007-01-24: added an explicit base tag to the layout template, so 
        that it no longer includes a trailing slash which zope adds for 
        all containerlike objects, which Silva Documents are. This means
        that linking to anchors now works like you would expect it to.

      - Changed css styling of the preview publisher buttons, making easier
        for users to integrate the publisher into their own layout. This
        should be noted in the release communication.

      - Fix for TOCs and AutoTOCS where docs that didn't have a title
        didn't appear because the link was empty (it was there). Now the
        id shows up so visitors can at least click it.

      - Renevated the TOC/AutoToc rendering, replacing the ancient,
        legacy, Netscape4 compatible image-based indent, where long titles
        break onto the next, non-indented line. Updated frontend.css with
        new selectors for the TOC levels.

      - Tocs display links with a trailing slash because there may be
        'edit/tab_preview' appended to it, but this conflicts with links 
        made in the editor that are rendered without the slash. Moved the
        slash into the appendage.

  1.5.9

    Features added

      - Changed calls from getMetdata to getMetadataValue where possible,
        resulting in a significant performance gain.

    Bugs fixed

      - Added a check to tocfilter to see if a metadata binding is found,
        since it isn't for broken ghost folders, and that used to break
        autotocs, and possibly other navigation.

  1.5.8

    Features added

      - Removed the 'new' button in the lookup window (issue 1640)

    Bugs fixed
      
      - Non Ascii characters in names or values of codesource paramaters
        no longer result in errors.
