@@ -36,14 +36,14 @@
     tal:attributes="content email" />
 </tal:skip>
   <meta metal:define-slot="meta" tal:omit-tag="" />
-  <!-- /End metatags -->
+  <!-- End metatags -->
   <!-- Begin stylesheets -->
   <link rel="stylesheet" type="text/css" media="all"
     tal:attributes="href here/frontend.css/absolute_url | nothing" />
   <link rel="stylesheet" type="text/css" media="print"
     tal:attributes="href here/print.css/absolute_url | nothing" />
   <link metal:define-slot="style" tal:omit-tag="" />
-  <!-- /End stylesheets -->
+  <!-- End stylesheets -->
   <!-- Start related links -->
   <link rel="shortcut icon"
     tal:attributes="href here/globals/favicon.ico/absolute_url | nothing" />
@@ -53,22 +53,22 @@
 <!-- Turn these on as needed by moving them out of the tal:skip -->
   <!-- Access navigation links -->
   <tal:block define="surround here/get_document_navigation_links | nothing">
-    <tal:repeat repeat="link surround/keys">
-     <tal:condition condition="python:surround[link] != '..'">
-      <link tal:condition="python:surround[link] or None"
-        tal:attributes="
-        rel link; 
-        href python:surround[link].absolute_url() + (surround[link].get_container() == surround[link] and '/' or '')"
-        />
-      </tal:condition>
-    </tal:repeat>
-    <link rel="up" tal:condition="python:surround.has_key('up')" tal:attributes="href surround/up" />
+  <tal:loop repeat="link surround/keys">
+  <tal:if condition="python:surround[link] != '..'">
+  <link tal:condition="python:surround[link] or None"
+    tal:attributes="
+    rel link; 
+    href python:surround[link].absolute_url() + (surround[link].get_container() == surround[link] and '/' or '')"
+    />
+  </tal:if>
+  </tal:loop>
+  <link rel="up" tal:condition="python:surround.has_key('up')" tal:attributes="href surround/up" />
   </tal:block>
-  <!-- /End access navigation links -->
+  <!-- End access navigation links -->
   <link rel="copyright" title="Copyright"
     tal:attributes="href here/copyright/absolute_url | nothing" />
 </tal:skip>
-  <!-- /End related links -->
+  <!-- End related links -->
   <script metal:define-slot="script" type="text/javascript"
     tal:replace="nothing">
     <!-- script slot -->
@@ -77,7 +77,7 @@
 
 <body metal:define-slot="body">
 
-<metal:block define-slot="header">
+<metal:slot define-slot="header">
 <!-- Start header slot -->
 <div class="header">
   <a class="icon"
@@ -89,7 +89,7 @@
     <img src="silva_32.png" width="32" height="32" border="0" alt="Silva"
       tal:attributes="src here/globals/silva_32.png/absolute_url | nothing" />
   </a>
-  <metal:block define-slot="top_navigation">
+  <metal:slot define-slot="top_navigation">
   <!-- Begin top_navigation slot -->
   <span class="breadcrumb"
      style="display:block;">
@@ -99,25 +99,30 @@
     <span tal:condition="not:repeat/item/end" tal:omit-tag="">&middot;</span></span>
   </span>
   <!-- End top_navigation slot -->
-  </metal:block>
+  </metal:slot>
 </div>
 <!-- End header slot -->
-</metal:block>
+</metal:slot>
 
-<span tal:replace="nothing"> _______ content area, here the XML is rendered in HTML _______ </span>
-<metal:block define-slot="table_of_contents">
-  <!-- Table of contents slot -->
-</metal:block>
+<metal:slot define-slot="table_of_contents">
+<!-- Table of contents slot -->
+</metal:slot>
+
 <div class="public">
-  <metal:block define-slot="main">
-    <!-- main slot -->
-  </metal:block>
+<span tal:replace="nothing"> _______ content area, here the XML is rendered to HTML _______ </span>
+<metal:slot define-slot="main">
+<!-- Start Silva content -->
+<tal:insert define="view_method options/view_method"
+  content="structure python:getattr(here, view_method)()">
+  <!-- this comment gets replaced by the Silva document content -->
+</tal:insert>
+<!-- End Silva content -->
+</metal:slot>
 </div>
-<br />
 
-<metal:block define-slot="footer">
-  <!-- Footer slot -->
-</metal:block>
+<metal:slot define-slot="footer">
+<!-- Footer slot -->
+</metal:slot>
 
 </body>
 </html>
